# misc-tools

./: README.md  mypy.ini  pyproject.toml
.github/workflows/: tests.yml
fix-xml-doc/: mypy.ini  pyproject.toml
fix-xml-doc/fix_xml_doc/: fix_xml_doc.py
fix-xml-doc/tests/: test_fix_xml_doc.py
functionalDescription/: functionalDescription.py
img2jpg/: pyproject.toml
img2jpg/img2jpg/: images2jpg.py  logger.py
img2pdf/: build.spec  mypy.ini  pyproject.toml
img2pdf/img2pdf/: images2pdf.py
img2pdf/tests/: test_img2pdf.py
lwp-bytes/: pyproject.toml
lwp-bytes/lwp_bytes/: lwp_bytes.py
lwp-bytes/tests/: test_lwp_bytes.py
tiff_fix/: Bilag2.doc.tif  README.md  mypy.ini  pyproject.toml  test.txt
tiff_fix/tiff_fix/: cli.py
whitespareremover/: whitespaceremover.py
