[tool.poetry]
name = "img2pdf"
version = "1.0.0"
description = ""
authors = ["Nina Jensen <jnik@aarhus.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^7.0.0"
natsort = "^6.2.0"
gooey = "^1.0.3"
pyinstaller = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
