[tool.poetry]
name = "img2pdf"
version = "1.1.1"
description = ""
authors = ["Nina Jensen <jnik@aarhus.dk>"]
maintainers = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://www.aarhusstadsarkiv.dk/"

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^7.0.0"
natsort = "^6.2.0"
gooey = "^1.0.3"
pyinstaller = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.10"
black = "^20.8b1"
flake8 = "^3.8.3"
mypy = "^0.782"

[tool.black]
line-length = 79
exclude = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
