[tool.poetry]
name = "lwp-bytes"
version = "0.1.0"
description = ""
authors = ["Nina Jensen <jnik@aarhus.dk>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.10"
black = "^20.8b1"
flake8 = "^3.8.3"
mypy = "^0.782"

[tool.black]
line-length = 79
exclude = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
