[tool.poetry]
name = "tiff_fix"
version = "0.1.0"
description = ""
authors = ["Nina Jensen"]

[tool.poetry.dependencies]
python = "^3.8"
reorder-python-imports = "^2.3.6"
click = "^7.1.2"
tqdm = "^4.54.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"

[tool.poetry.scripts]
tiff_fix = "tiff_fix.cli:cli"

[tool.black]
line-length = 79
exclude = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

